--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,14 @@
     align-items: center;
     height: 75vh;
     margin-top: 25vh;
+    background-color: #603F8B;
 }
+
+.custom-green {
+   background-color: #616C59;
+}
+
+
+.custom-light-purple {
+    background-color: #9388A2;
+ }
