Added more UI stuff

--- a/src/assets/scss/blk-design-system-react/custom/_input-group.scss
+++ b/src/assets/scss/blk-design-system-react/custom/_input-group.scss
@@ -181,8 +181,8 @@
 
 textarea.form-control{
     max-width: 100%;
-    max-height: 80px;
     padding: 10px 10px 0 0;
+    background-color: rgb(77, 77, 77);
     resize: none;
     border: none;
     border-bottom: 1px solid lighten($black,5%);
